# mPAPA

./: .env.example  .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml
.github/workflows/: build.yml
docs/: architecture-guide.md  mPAPA-pitch.md
domain_profiles/: biotechnology-life-sciences.yaml  electrical-engineering-semiconductors.yaml  general-patent-drafting.yaml  materials-science-nanotechnology.yaml  medtech-mechanical-engineering.yaml  pharma-chemistry.yaml  processes-manufacturing.yaml  software-ai.yaml  telecommunications-standards.yaml
src/patent_system/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
tests/: conftest.py
tests/integration/: test_agents.py  test_checkpoint_resume.py  test_disclosure_flow.py  test_domain_profiles_integration.py  test_exe_smoke.py  test_personality_settings_panel.py  test_personality_workflow.py  test_review_notes_workflow.py  test_workflow_e2e.py
tests/property/: test_build_props.py  test_chat_prompt_props.py  test_disclosure_props.py  test_embedding_preservation_props.py  test_embedding_recalculation_props.py  test_export_props.py  test_full_text_downloader_props.py  test_google_scholar_fulltext_props.py  test_http_integration_props.py  test_latex_export_props.py  test_llm_error_props.py  test_logging_props.py  test_markdown_converter_props.py  test_parser_props.py  test_persistence_props.py  test_personality_properties.py  test_relevance_sort_props.py  test_review_notes_properties.py  test_routing_props.py  test_scheduler_props.py  test_search_props.py  test_settings_props.py  test_sorting_props.py  test_vectorization_props.py
tests/unit/: test_build_script.py  test_chat_panel.py  test_claims_drafting.py  test_config.py  test_consistency_review.py  test_db_repository.py  test_db_schema.py  test_description_drafting.py  test_disclosure.py  test_docx_exporter.py  test_domain_profiles.py  test_domain_profiles_dspy.py  test_draft_panel.py  test_dspy_modules.py  test_embeddings.py  test_exceptions.py  test_full_text_downloader.py  test_latex_exporter.py  test_logging.py  test_main.py  test_markdown_converter.py  test_markdown_latex_converter.py  (+14 more)
(+53 files in other folders)
