[project]
name = "patent-system"
version = "1.1.0"
description = "AI-powered patent analysis and drafting system with multi-agent orchestration"
readme = "README.md"
authors = [
    { name = "Hans Koehler", email = "hans@koehler.eu.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nicegui",
    "langgraph",
    "llama-index",
    "dspy",
    "python-docx",
    "pydantic-settings",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-epo-ops-client>=4.2.1",
    "pymupdf>=1.27.2.2",
]

[project.scripts]
mpapa = "patent_system.main:cli"

[dependency-groups]
dev = [
    "hypothesis",
    "pytest",
    "pytest-cov",
]
build = ["nuitka"]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.nuitka]
output-dir = "dist"
include-package = [
    "patent_system",
    "nicegui",
    "langgraph",
    "langgraph.checkpoint",
    "llama_index.core",
    "dspy",
    "pydantic",
    "pydantic_settings",
    "docx",
]
include-package-data = ["nicegui"]
include-data-dir = [
    "src/patent_system/export/templates=patent_system/export/templates",
]
include-data-files = [
    ".env.example=.env.example",
]
nofollow-import-to = [
    "tests",
    "pytest",
    "hypothesis",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
